# ML-Pipeline

./: .gitignore  Makefile  README.md  docker-compose.yaml  model.joblib  pipeline.py  pyproject.toml
bigquery/: create_conf.py  main.py  schema.json
components/deploy/: Dockerfile  component.yaml  main.py
components/evaluate/: component.yaml  main.py  pyproject.toml
components/preprocess/: component.yaml  main.py  pyproject.toml
components/train/: component.yaml  main.py  pyproject.toml
dataset/: config.json  create_dataset.py
job/: main.py  pyproject.toml
serving/: Dockerfile  main.py  pyproject.toml
